[package]
name = "grap_protocol"
version = "0.1.0"
authors = ["Jan Růžička <jan.ruzicka01@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
uuid = { version = "0.8", features = ["v4"] }
rand = { version = "0.8", optional = true }

[features]
statistical_tests = ["rand"]
